[tool.poetry]
name = "hyperspherical-vae"
version = "0.2.0"
description = "Pytorch implementation of Hyperspherical Variational Auto-Encoders"
authors = ["Andreas Fehlner <fehlner@arcor.de>"]
repository = "https://github.com/andife/s-vae-pytorch"
readme = "README.md"
license = "MIT"
keywords = ["pytorch","vae","variational-auto-encoder","von-mises-fisher","machine-learning","deep-learning","manifold-learning"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"